--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "leaflet.tilelayer.colorfilter": "^1.2.5",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "node-sass": "^4.14.1",
     "plyr": "^3.5.10",
     "prism-react-renderer": "^0.1.7",
     "prism-themes": "^1.3.0",
     "prop-types": "^15.7.2",
+    "rc-cascader": "^1.3.0",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
     "react-beautiful-dnd": "^13.0.0",
