--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "element-resize-event": "^3.0.3",
     "emoji-mart": "^3.0.0",
     "google-maps-react": "^2.0.2",
+    "i18next": "^19.6.3",
     "is_js": "^0.9.0",
     "leaflet": "^1.6.0",
     "leaflet.markercluster": "^1.4.1",
