updated myems description

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "MyEMS",
-  "name": "MyEMS | the Leading Free and Open Source Energy Management System",
+  "name": "MyEMS | the Leading Open Source Energy Management System",
   "icons": [
     {
       "src": "favicon.ico",
